設定の追加

--- a/システム環境設定.md
+++ b/システム環境設定.md
@@ -8,6 +8,10 @@ Control -> Caps Lock
 Command -> Control
 ```
 
+```
+Touch Barに表示する項目: F1, F2などのキー
+```
+
 ## 入力ソース
 
 ```
@@ -29,3 +33,7 @@ Command -> Control
 ```
 - [x] 視差効果を減らす
 ```
+
+# Touch ID
+
+(Touch IDを設定する)
