--- a/システム環境設定.md
+++ b/システム環境設定.md
@@ -6,6 +6,12 @@
 Touch Barに表示する項目: F1, F2などのキー
 ```
 
+キーボードが接続されているときしか表示されない(?)
+
+```
+- [x] F1、F2などのキーを標準のファンクションキーとして使用
+```
+
 ## 入力ソース
 
 ```
